feat(BonusPoint) : add bonus point